<resources>
    <string name="app_name">RehatCoffee</string>
    <string name="masuk_disini">Masuk Disini</string>
    <string name="sudah_punya_akun">Sudah punya akun ?</string>
    <string name="masuk">Masuk</string>
    <string name="role">Role</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="belum_punya_akun">Belum punya akun ?</string>
    <string name="daftar_disini">Daftar Disini</string>
    <string name="what_about_coffee_nfriend">What About Coffee, \nFriend</string>
    <string name="minuman">Minuman</string>
    <string name="makanan">Makanan</string>
    <string name="menu">Menu</string>
    <string name="pesanan">Pesanan</string>
    <string name="pesan">Pesan</string>
    <string name="checkout">Checkout</string>
    <string name="keranjang">Keranjang</string>
    <string name="detail_pesanan">Detail Pesanan</string>
    <string name="button_text_ok">OK</string>
    <string name="error_email_not_valid">Email Tidak Valid</string>
    <string name="error_password_not_valid">Password Min 8 Karakter</string>
    <string name="error_username">Username Min 8 Karakter</string>
    <string name="pemesanan_berhasil_dilakukan_nsilahkan_melakukan_pembayaran_kekasir">Pemesanan Berhasil Dilakukan \nSilahkan Melakukan Pembayaran Kekasir</string>
    <string name="tambah">Tambah</string>
    <string name="ditambahkan">Ditambahkan</string>
    <string name="daftar">Daftar</string>
    <string name="notification_title">Pesanan Selesai</string>
    <string name="pemberitahuan">Pemberitahuan</string>
    <string name="history">History</string>
    <string name="hapus">Hapus</string>
    <string name="ubah">Ubah</string>
    <string name="tambah_product">Tambah Product</string>
    <string name="unggah_foto_product">Unggah Foto Product</string>
    <string name="nama_product">Nama Product</string>
    <string name="masukan_nama_product">Masukan nama Product</string>
    <string name="harga_product">Harga Product</string>
    <string name="masukan_harga_product">Masukan Harga Product</string>
    <string name="deskripsi_product">Deskripsi Product</string>
    <string name="kirim">Kirim</string>
    <string name="jenis_product">Jenis Product</string>
    <string name="masukan_deskripsi_product">Masukan Deskripsi Product</string>
    <string name="update_product">Update Product</string>
    <string name="selesaikan">Selesaikan</string>
    <string name="selesaikan_pembayaran">Selesai Bayar</string>
    <string name="selesai">Selesai</string>
    <string name="logout">Logout</string>
    <string name="channel_id">my_channel_id</string>
    <string name="lunas">Lunas</string>
    <string name="pesanan_selesai">Pesanan Selesai</string>
</resources>